force-app/main/default/objects/Student_Test_Association__c/fields/CE_Module__c.field-meta.xml
<CustomField>
    <fullName>CE_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CE-Module</label>
    <referenceTo>CE_Modules__c</referenceTo>
    <relationshipLabel>Student Test Associations</relationshipLabel>
    <relationshipName>Student_Test_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>