force-app/main/default/objects/Student_Test_Association__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Test Associations</relationshipLabel>
    <relationshipName>Student_Test_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>