force-app/main/default/objects/Student_Test_Association__c/fields/Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Enrollment</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Student Test Associations</relationshipLabel>
    <relationshipName>Student_Test_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>