force-app/main/default/objects/Student_Test_Association__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <formula>Test_Master__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template</label>
    <type>Text</type>
</CustomField>