force-app/main/default/objects/Student_Test_Association__c/fields/Test_Master__c.field-meta.xml
<CustomField>
    <fullName>Test_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Master</label>
    <referenceTo>Test_Master__c</referenceTo>
    <relationshipLabel>Student Test Associations</relationshipLabel>
    <relationshipName>Student_Test_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>