force-app/main/default/objects/Student_Test_Association__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <formula>TEXT( Test_Master__r.Test_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test type</label>
    <type>Text</type>
</CustomField>