force-app/main/default/objects/Student_Test_Association__c/fields/Total_Marks_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Total_Marks_Obtained__c</fullName>
    <label>Total Marks Obtained</label>
    <summarizedField>Student_Assessment_Result__c.Marks__c</summarizedField>
    <summaryForeignKey>Student_Assessment_Result__c.Student_Test_Association__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>