force-app/main/default/objects/Student_Test_Association__c/fields/Total_Questions__c.field-meta.xml
<CustomField>
    <fullName>Total_Questions__c</fullName>
    <description>display total number of questions</description>
    <label>Total Questions</label>
    <summaryForeignKey>Student_Assessment_Result__c.Student_Test_Association__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>