force-app/main/default/objects/Student_Test_Association__c/listViews/Student_Test_Association.listView-meta.xml
<ListView>
    <fullName>Student_Test_Association</fullName>
    <columns>NAME</columns>
    <columns>CE_Module__c</columns>
    <columns>Course_Enrollment__c</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Test_Master__c</columns>
    <columns>Test_Type__c</columns>
    <columns>Total_Marks_Obtained__c</columns>
    <columns>Total_Questions__c</columns>
    <filterScope>Everything</filterScope>
    <label>Student Test Association</label>
</ListView>